--- a/popup.html
+++ b/popup.html
@@ -7,19 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <!-- Header Section -->
+    <div id="header">
+        <div id="title">Simple JSON Formatter</div>
+        <div id="fontControls">
+            <button id="increaseFont">+</button>
+            <button id="decreaseFont">-</button>
+        </div>
+    </div>
     <div class="container">
         <div class="input-container">
+            <div id="lineNumbers" class="line-numbers"></div>
             <textarea id="jsonInput" placeholder="Paste JSON here..."></textarea>
             <button id="formatButton">Format JSON</button>
         </div>
         <div class="output-container">
             <pre id="jsonOutput"></pre>
-            <button id="copyJsonButton">Copy JSON</button> <!-- New button here -->
+            <button id="copyJsonButton">Copy JSON</button>
         </div>
         <div id="statusBar" class="status-bar">Characters: 0 | Position: Line 1, Col 1</div>
     </div>
-
+    <div id="footer">
+        hashPalLabs - Tech Division of arunsyoga.in
+    </div>
     <script src="popup.js"></script>
 </body>
 </html>
