Changing Url and version

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
         <div id="statusBar" class="status-bar">Characters: 0 | Position: Line 1, Col 1</div>
     </div>
     <div id="footer">
-        For support and code base:<a target="_blank" href="https://arunsyoga.in/extentions.html">HahsPalLabs</a>.
+        For support and code base:<a target="_blank" href="https://hashpallabs.com/">HahsPalLabs</a>.
     </div>
     <script src="popup.js"></script>
 </body>
